[project]
name = "sae-c2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-contrib-python",
    "pyqt6",
    "matplotlib",
    "ipykernel>=6.29.5",
    "marimo>=0.13.15",
]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]


fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
